--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<![endif]-->
 
 		<title>Assignment Solution for Module 3</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
@@ -66,8 +66,8 @@
 
 
 		<!-- jQuery (Bootstrap JS plugins depend on it) -->
-		<script src="js/jquery-1.11.3.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
