--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					
-					<div id="collapsable-nav" class="collapse navbar-collapse">
-						 <ul id="nav-list" class="nav navbar-nav navbar-right">
-							<li class="visible-xs">
-								<a href="#" class="text-center"><br class="hidden-xs">Chicken</a>
-							</li>
-							<li class="visible-xs">
-								<a href="#" class="text-center"><br class="hidden-xs">Beef</a>
-							</li>
-							<li class="visible-xs">
-								<a href="#" class="text-center"><br class="hidden-xs">Sushi</a>
-							</li>
-						</ul><!-- #nav-list -->
-					</div><!-- .collapse .navbar-collapse -->
 				</div><!-- .container -->
+					
+				<div id="collapsable-nav" class="collapse navbar-collapse">
+					 <ul id="nav-list" class="nav navbar-nav navbar-right">
+						<li class="visible-xs">
+							<a href="#" class="text-center">Chicken</a>
+						</li><hr>
+						<li class="visible-xs">
+							<a href="#" class="text-center">Beef</a>
+						</li><hr>
+						<li class="visible-xs">
+							<a href="#" class="text-center">Sushi</a>
+						</li>
+					</ul><!-- #nav-list -->
+				</div><!-- .collapse .navbar-collapse -->
 			</nav><!-- #header-nav -->
 		</header>
 
@@ -50,7 +50,7 @@
 			<h2 class="text-center">Our Menu</h2>
 			
 			<div class="mainSection">
-      	<div class="row">
+      				<div class="row">
 					<section class="col-xs-12">
 						<h3 class="sectionHeader text-center">Chicken</h3>
 						<p>Lorem ipsum dolor sit amet, hac felis eros amet, nibh donec in vitae per sed, ullam ac, egestas primis ullamcorper vel per, eget hac mauris aenean quis nullam felis. Orci eu, mauris ultricies mattis cras, ligula tincidunt ut habitant ut vitae, quis facilisis. Porta sem ac leo suscipit et, lectus pretium lectus dignissim mauris felis felis. Etiam pede, nunc tincidunt, orci torquent curabitur libero mauris. Pellentesque metus quis aenean justo, tristique aenean ultrices arcu duis convallis. Magna quia dolor, eget aliquet rhoncus vel. Suspendisse scelerisque. Aliquet cras sapien quam eu. Cillum et et vivamus risus, felis gravida illum aliquet dolor, vulputate sollicitudin neque.</p>
