--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 			</div><!-- End of .mainSection -->
 		</div><!-- End of #main-content -->
 
+		<footer class="panel-footer">
+			<div class="container">
+				<div class="text-center">&copy; Copyright Food, LLC 2016</div>
+			</div>
+		</footer>
 
 		<!-- jQuery (Bootstrap JS plugins depend on it) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
