--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 				<div id="collapsable-nav" class="collapse navbar-collapse">
 					 <ul id="nav-list" class="nav navbar-nav navbar-right">
 						<li class="visible-xs">
-							<a href="#" class="text-center">Chicken</a>
-						</li><hr>
+							<a href="#" class="text-center">Chicken</a><hr>
+						</li>
 						<li class="visible-xs">
-							<a href="#" class="text-center">Beef</a>
-						</li><hr>
+							<a href="#" class="text-center">Beef</a><hr>
+						</li>
 						<li class="visible-xs">
 							<a href="#" class="text-center">Sushi</a>
 						</li>
